# backend/src/routes/ability.php
@@ -1,0 +1,8 @@
+<?php
+
+use App\Http\Controllers\Ability\CheckAbility;
+use Illuminate\Support\Facades\Route;
+
+Route::prefix('api/ability')->group(function () {
+    Route::get('/check/{ability}', CheckAbility::class)->middleware('auth:sanctum');
+});
